#32 - Corrected unhidden mixing overflow.

--- a/app/scss/helpers/_mixins.scss
+++ b/app/scss/helpers/_mixins.scss
@@ -54,7 +54,7 @@
         width: auto;
         height: auto;
         position: static;
-        overflow: auto;
+        overflow: visible;
         visibility: visible;
     }
 }
